--- a/index_style.css
+++ b/index_style.css
@@ -193,6 +193,28 @@ table {
 	box-shadow: 0 3px 12px 2px rgb(0 0 0 / 10%);
 }
 
+.merit .list .card .img {
+	margin: 0 auto 40px;
+	position: relative;
+	display: block;
+	width: 140px;
+}
+
+.merit .list .card img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.merit .list .card .img::before {
+	display: block;
+	padding-bottom: 100%;
+	content: '';
+}
+
 .merit .list .card .title {
 	margin-bottom: 12px;
 	font-size: 28px;
