--- a/index_style.css
+++ b/index_style.css
@@ -126,7 +126,7 @@ table {
 /* banner */
 .banner {
 	position: relative;
-	background-image: url('https://imgur.com/AsTEQNo.jpg');
+	background-image: url('https://imgur.com/hijtNac.jpg');
 	background-size: cover;
 	background-position: center center;
 }
